app/javascript/styles/mastodon/components.scss
/* ... */
.icon-with-badge {
  display: inline-flex;
  position: relative;

  &__badge {
    position: absolute;
    inset-inline-start: 9px;
    top: -13px;
    color: var(--color-text-on-brand-base);
    background: var(--color-bg-brand-base);
    border: 2px solid var(--color-bg-primary);
    padding: 1px 6px;
    border-radius: 6px;
    font-size: 10px;
    font-weight: 500;
    line-height: 14px;
  }

  &__issue-badge {
    position: absolute;
    inset-inline-start: 11px;
    bottom: 1px;
    display: block;
    background: var(--color-text-error);
    border-radius: 50%;
    width: 0.625rem;
    height: 0.625rem;
  }
}

.column-link--transparent .icon-with-badge__badge {
  border-color: var(--color-bg-primary);
}

.column-title {
  text-align: center;
  padding-bottom: 32px;

  h3 {
    font-size: 24px;
    line-height: 1.5;
    font-weight: 700;
    margin-bottom: 10px;
  }

  p {
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    color: var(--color-text-secondary);
  }

  @media screen and (width >= 600px) {
    padding: 40px;
  }
}

.copy-paste-text {
  background: var(--color-bg-secondary);
  border-radius: 8px;
  border: 1px solid var(--color-border-primary);
  padding: 16px;
  color: var(--color-text-primary);
  font-size: 15px;
  line-height: 22px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  transition: border-color 300ms linear;
  margin-bottom: 30px;

  &:focus,
  &.focused {
    transition: none;
    outline: 0;
    border-color: var(--color-border-brand);
  }

  &.copied {
    border-color: var(--color-text-success);
    transition: none;
  }

  textarea {
    width: 100%;
    height: auto;
    background: transparent;
    color: inherit;
    font: inherit;
    border: 0;
    padding: 0;
    margin-bottom: 30px;
    resize: none;

    &:focus {
      outline: 0;
    }
  }
}

.onboarding__profile {
  position: relative;
  margin-bottom: 40px + 20px;
  margin-top: -20px;

  .app-form__avatar-input {
    border: 2px solid var(--color-bg-primary);
    position: absolute;
    inset-inline-start: -2px;
    bottom: -40px;
    z-index: 2;
  }

  .app-form__header-input {
    margin: 0 -20px;
    border-radius: 0;

    img {
      border-radius: 0;
    }
  }
}

.compose-panel {
  width: 285px;
  margin-top: 8px;

  // Padding prevents focus outlines from being cut off
  margin-inline-start: -2px;
  padding: 2px;
  display: flex;
  flex-direction: column;
  height: calc(100% - 10px);
  overflow-y: auto;
  scrollbar-width: thin;

  .compose-form {
    flex: 1 1 auto;
  }
}

.navigation-panel {
  margin-top: 10px;
  margin-bottom: 10px;
  height: calc(100% - 20px);
  overflow: hidden;
  display: flex;
  flex-direction: column;

  &__menu {
    flex: 1 1 auto;
    min-height: 0;
    overflow-y: auto;
    scrollbar-width: thin;
  }

  &__list-panel {
    &__header {
      display: flex;
      align-items: center;
      padding-inline-end: 4px;

      &__sep {
        width: 0;
        height: 24px;
        border-left: 1px solid var(--color-border-primary);
      }

      .column-link {
        flex: 1 1 auto;
      }

      .icon-button {
        padding: 8px;
      }
    }

    &__items {
      padding-inline-start: 24px + 8px;

      .icon {
        display: none;
      }
    }
  }

  &__compose-button {
    display: flex;
    justify-content: flex-start;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-inline-start: 12px - 7px;
    padding-inline-end: 12px;
    gap: 8px;
    margin: 12px;
    border-radius: 6px;
    font-size: 16px;
    font-weight: 600;
    line-height: 18px;

    .icon {
      width: 24px;
      height: 24px;
    }
  }

  .navigation-bar {
    padding: 16px;
  }

  .search {
    margin: 16px;
    margin-bottom: 12px;
  }

  .logo {
    height: 30px;
    width: auto;
  }

  &__logo {
    margin-bottom: 12px;
  }

  .getting-started__trends h4 {
    padding: 10px 12px;
    padding-inline-start: 16px;
  }

  .getting-started__trends .trends__item {
    padding: 10px 12px;
    padding-inline-start: 16px;
  }

  @media screen and (height <= 930px) {
    &__portal .trends__item:nth-child(n + 5) {
      display: none;
    }
  }

  @media screen and (height <= (930px - 56px)) {
    &__portal .trends__item:nth-child(n + 4) {
      display: none;
    }
  }

  @media screen and (height <= (930px - 56px * 2)) {
    &__portal .trends__item:nth-child(n + 3) {
      display: none;
    }
  }

  @media screen and (height <= (930px - 56px * 3)) {
    &__portal {
      display: none;
    }
  }
}

.navigation-panel,
.compose-panel {
  hr,
  li[role='separator'] {
    flex: 0 0 auto;
    border: 0;
    background: transparent;
    border-top: 1px solid var(--color-border-primary);
    margin: 10px 0;
  }

  .flex-spacer {
    background: transparent;
  }
}

.drawer__pager {
  box-sizing: border-box;
  padding: 0;
  flex-grow: 1;
  position: relative;
  overflow: hidden;
  display: flex;
  border-radius: 4px;
  border: 1px solid var(--color-border-primary);
}

.drawer__inner {
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  background: var(--color-bg-primary);
  box-sizing: border-box;
  padding: 0;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  z-index: 0;
}

.drawer__inner__mastodon {
  position: relative;
  background: var(--color-bg-primary);
  flex: 1;
  min-height: 47px;
  display: none;
  contain: content;

  > img {
    display: block;
    object-fit: contain;
    object-position: bottom left;
    width: 85%;
    height: 100%;
    pointer-events: none;
    user-select: none;
  }

  @media screen and (height >= 640px) {
    display: block;
  }
}

.drawer__header {
  flex: 0 0 auto;
  font-size: 16px;
  border: 1px solid var(--color-border-primary);
  margin-bottom: 10px;
  display: flex;
  flex-direction: row;
  border-radius: 4px;
  overflow: hidden;

  a:hover,
  a:focus,
  a:active {
    color: var(--color-text-primary);
  }
}
/* ... */

